# Generalisation2

./: .gitignore  Agent_v1.py  Agent_v2.py  Agent_v3.py  Dockerfile  Dockerfile.learn_env  Makefile  README.md  TestDockerfile.dockerfile  custom-models.conf  docker-compose.yaml  env_prompt.py  prompts_for_dream.txt  pyproject.toml  requirements.txt  ruff.toml  setup.py  todo.md
.old/: .gitignore
.old/scripts/: controller.py  infinite_loop.py  main.py  main_dream.py  serve_dream.py  space_grapher.py  space_warmer.py  space_warmer.sh  test.py
.old/scripts/unused/: refresher.py
.old/src/: genner.py  looper.py
.old/src/agent/: BaseAgent.py  __init__.py
.old/src/genner/: Dream.py  Qwen.py  __init__.py
.old/tests/: container.py  dream.py
config/: multi-container.toml  single-container.toml
data/controller/learned_skills/: identify_and_remove_any_large_log_files_in_varlog_directory..json  identify_and_remove_any_unnecessary_log_files_in_varlog_directory.json  identify_and_remove_large_log_files_in_varlog_directory.json
docker/dataset-centre-postgres/: docker-compose.db.yml
docker/dataset-centre-seaweedfs/: docker-compose.yml
docker/fedora-learn-compose/: Dockerfile.fedora-learn  docker-compose.yaml  test-container.py
docker/fedora-learn-compose-open-ports/: Dockerfile.fedora-learn  randomly_encrypt.sh  set_random_permissions.sh
docker/learn-compose/: Dockerfile  Dockerfile.learn_env  docker-compose.yml  test-container.py
docker/learn-env/: Dockerfile.learn_env  docker-compose.yml
docker/mini-learn-compose/: Dockerfile.mini-learn  docker-compose.yml
docker/space-warmer/: Dockerfile.space_warmer  docker-compose.space_warmer.yml
docker/special-learn-compose/: Dockerfile.alpine  docker-compose.yml
experiments/: yaml-exporter.ipynb
prev/: Agent_v1.py  Agent_v2.py  Agent_v3.py  TestDockerfile.dockerfile  docker-compose.yaml  env_prompt.py
scripts/: archive_old_runs.sh  container_launcher.py  controller.py  dpo_maker.py  dream_grid.py  dream_grid_v2.py  eda_dpo.py  eval.py  infinite_loop.py  infinite_loop_dream.py  loop.py  main.py  main_.py  main_fg.py  meminfo_alt.py  prometheus_listener.py  refresher.py  schrodinger_test.py  serve_dream.py  serve_dream_app.py  space_grapher.py  space_warmer.py  test.py
scripts/unused/: infinite_run.sh  launcher.sh  process_data_to_seaweed.py
src/: agent.py  code.py  config.py  container.py  data.py  gen.py  helper.py  looper.py  meta.py  mock.py  prep.py  prep2.py  prompt.py  prompts.py  qemu.py  types.py
src/agent/: BaseAgent.py  EnvAgent.py  StrategyAgent.py  __init__.py
src/genner/: Base.py  Claude.py  Deepseek.py  Dream.py  OAI.py  Ollama.py  Qwen.py  WizardCoder.py  __init__.py
src/genner/config/: __init__.py
src/tool/: docker.py
src/typing/: config.py  message.py  training.py
tests/: agent.py  conftest.py  dream.py  qwen.py
