[project]
name = "gen2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.14"
dependencies = [
    "anthropic>=0.37.1",
    "debugpy>=1.8.8",
    "docker",
    "jinja2>=3.1.4",
    "jsonlines",
    "loguru",
    "ollama>=0.4.4",
    "openai",
    "pip>=24.3.1",
    "plotext",
    "polars>=1.19.0",
    "prometheus-client>=0.21.0",
    "psutil",
    "pydantic",
    "python-dotenv",
    "pyyaml>=6.0.2",
    "schedule>=1.2.2",
    "transformers>=4.47.1",
    "unidecode>=1.3.8",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
main_script = "scripts:main"

[tool.setuptools]
py-modules = ['scripts', 'src']
